--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <p>
           Hello World, My name is Rich and welcome to my site. A little about myself: I'm a Java bootcamp graduate, I
           grew up and currently live in NYC, hispanic, I dabble in photograhy, and I have a very very wide taste of
-          music, I can literally go from Nirvana to Nas to Daft Punk to loFi back to 90's grunge Alice In Chains;
+          music, I can literally go from Nirvana to Nas to Daft Punk to loFi back to 90's grunge;
           plenty of room on my pallete. I appreciate art, design and self expression in all forms, my biggest
           aspiration right now is to excel in front end development and design.
           <br>
