--- a/about.html
+++ b/about.html
@@ -65,8 +65,8 @@
           Hello World, My name is Rich and welcome to my site. A little about myself: I'm a Java bootcamp graduate, I
           grew up and currently live in NYC and I'm hispanic. I dabble in photography, I've hiked to all corners of NYC to catch a flick. My taste of
           music is very broad, I can literally go from Nirvana, to Nas, to Daft Punk, to loFi, back to 90's grunge;
-          plenty of room on my pallete. I appreciate art, design and self expression in all forms and my biggest
-          aspiration right now is to excel in front end development and design.
+          plenty of room on my pallete. I appreciate art, design and self expression in all forms, my biggest
+          aspiration right now is to excel and learn as much as I can in front end development and design.
           <br>
           <br>
           I graduated from the Software Guild Java Bootcamp and enrolled for it through the TechHire Open Code program
