--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <span class="text-secondary">TAVERAS</span>
     </h1>
     <h2 class="sm-heading">
-      <span class="text-secondary">Jr Full Stack Web Developer, Jr Front End Developer</span>
+      Jr Full Stack Web Developer, <span class="text-secondary">Jr Front End Developer</span>
     </h2>
     <div class="about-info">
         <div class="bio">
