--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
         <div class="icons">
   
-          <a href="#!">
+          <a href="https://www.linkedin.com/in/richtaveras/">
             <i class="fab fa-linkedin fa-2x"></i>
           </a>
           <!-- <a href="#!">
