--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
       <div class="icons">
 
-        <a href="#!">
+        <a href="https://www.linkedin.com/in/richtaveras/">
           <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <!-- <a href="#!">
