--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                 (347) 776 9953
             </div>
             <div class="icons">
-                    <a href="#!">
+                    <a href="https://www.linkedin.com/in/richtaveras/">
                       <i class="fab fa-linkedin fa-2x"></i>
                     </a>
                     <!-- <a href="#!">
