--- a/about.html
+++ b/about.html
@@ -64,15 +64,14 @@
         <p>
           Hello World, My name is Rich and welcome to my site. A little about myself: I'm a Java bootcamp graduate, I
           grew up and currently live in NYC and I'm hispanic. I dabble in photography, I've hiked to all corners of NYC to catch a flick. My taste of
-          music is very broad, I can literally go from Nirvana, to Nas, to Daft Punk, to loFi, back to 90's grunge;
-          plenty of room on my pallete. I appreciate art, design and self expression in all forms, my biggest
-          aspiration right now is to excel and learn as much as I can in front end development and design.
+          music is very broad, I can literally go from Nirvana, to Nas, to Daft Punk, to loFi, back to 90's grunge. I appreciate art, design and self expression in all forms, my biggest
+          aspiration right now is to be successful and learn as much as I can in web development and design.
           <br>
           <br>
           I graduated from the Software Guild Java Bootcamp and enrolled for it through the TechHire Open Code program
           at LaGuardia Community College in Queens, NY. My class consisted of over 300 hours of hands on development.
           We covered Java, JavaScript, HTML, CSS, JQuery, AJAX, CRUD, REST, the spring-framework, spring dependency
-          injection, OOP concepts, AOP programming, MVC architecture, and the ever so rewarding console applications.
+          injection, OOP concepts, AOP programming, MVC architecture, Git, and the ever so rewarding console applications.
         </p>
       </div>
 
