--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
   </header>
 
   <section class="services">
-    <div class="container grid-3 center">
+    <div class="container grid-4 center">
+      <div>
+        <i class="fas fa-grin-stars fa-3x"></i>
+        <h3>About Me</h3>
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
+      </div>
       <div>
         <i class="fas fa-code-branch fa-3x"></i>
         <h3>Projects</h3>
@@ -63,7 +68,8 @@
             <br>
             I graduated from the Software Guild Java Bootcamp and enrolled for it through the TechHire Open Code
             program
-            at LaGuardia Community College in Queens, NY. The bootcamp consisted of over 300 hours of hands on development.
+            at LaGuardia Community College in Queens, NY. The bootcamp consisted of over 300 hours of hands on
+            development.
             <!-- We covered Java, JavaScript, HTML, CSS, JQuery, AJAX, CRUD, REST, the spring-framework, spring dependency
                 injection, OOP concepts, AOP programming, MVC architecture, Git, and the ever so rewarding console applications.</p> -->
           </p>
