--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/main.css">
-  <title>Welcome To My Portfolio</title>
+  <title>Rich Portfolio Website</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         Hello <span class="text-secondary">World</span>
       </div>
       <div class="text">
-
+        This website is built fully responsive with modern technologies: HTML5, CSS3 - Transitions/grid/flex, JavaScript, Git
       </div>
     </div>
 
@@ -27,55 +27,65 @@
 
   <section class="services">
     <div class="container grid-4 center">
-      <div>
-        <i class="fas fa-grin-stars fa-3x"></i>
-        <h3>About Me</h3>
-        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-      </div>
-      <div>
-        <i class="fas fa-code-branch fa-3x"></i>
-        <h3>Projects</h3>
-        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-      </div>
+      <li class="tab">
+        <div>
+          <i class="fas fa-grin-stars fa-3x"></i>
+          <h3>About Me</h3>
+          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
+        </div>
+      </li>
+      <li class="tab">
+        <div>
+          <i class="fas fa-code-branch fa-3x"></i>
+          <h3>Projects</h3>
+          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
+        </div>
+      </li>
+      <li class="tab">
       <div>
         <i class="fas fa-chalkboard-teacher fa-3x"></i>
         <h3>Skills</h3>
         <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
       </div>
+    </li>
+    <li class="tab">
       <div>
         <i class="fas fa-envelope fa-3x"></i>
         <h3>Contact Me</h3>
         <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
       </div>
     </div>
+  </li>
   </section>
 
   <!-- About -->
   <section class="about bg-light">
-    <div class="container">
-      <div class="grid-2">
-        <div class="center">
-          <i class="fas fa-hand-spock fa-10x"></i>
-        </div>
-        <div>
-          <h3>About Me</h3>
-          <p>My name is Rich and welcome to my site. A little about myself: I'm a recent Fullstack bootcamp grad, I
-            grew up and currently live in NYC. I dabble in photography, I've hiked to all corners of
-            the city to snap a flick. My taste of music is big on Nirvana, 90's Hip Hop/Alt Rock/ and Grunge. I
-            appreciate art, design and self expression in all forms, my biggest aspiration right now is to be
-            successful and learn as much as I can in web development and design.
-            <br>
-            <br>
-            I graduated from the Software Guild Java Bootcamp and enrolled for it through the TechHire Open Code
-            program
-            at LaGuardia Community College in Queens, NY. The bootcamp consisted of over 300 hours of hands on
-            development.
-            <!-- We covered Java, JavaScript, HTML, CSS, JQuery, AJAX, CRUD, REST, the spring-framework, spring dependency
+    <ul class="accordian">
+      <div class="container">
+        <div class="grid-2">
+          <div class="center">
+            <i class="fas fa-hand-spock fa-10x"></i>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>My name is Rich and welcome to my site. A little about myself: I'm a recent Fullstack bootcamp grad, I
+              grew up and currently live in NYC. I dabble in photography, I've hiked to all corners of
+              the city to snap a flick. My taste of music is big on Nirvana, 90's Hip Hop/Alt Rock/ and Grunge. I
+              appreciate art, design and self expression in all forms, my biggest aspiration right now is to be
+              successful and learn as much as I can in web development and design.
+              <br>
+              <br>
+              I graduated from the Software Guild Java Bootcamp and enrolled for it through the TechHire Open Code
+              program
+              at LaGuardia Community College in Queens, NY. The bootcamp consisted of over 300 hours of hands on
+              development.
+              <!-- We covered Java, JavaScript, HTML, CSS, JQuery, AJAX, CRUD, REST, the spring-framework, spring dependency
                 injection, OOP concepts, AOP programming, MVC architecture, Git, and the ever so rewarding console applications.</p> -->
-          </p>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+    </ul>
   </section>
 
   <footer class="center bg-dark">
