fixed tab button layout for mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         Hello <span class="text-secondary">World</span>
       </div>
       <div class="text">
-        This website is built fully responsive with modern technologies: HTML5, CSS3 - Transitions/grid/flex, JavaScript, Git
+        This website is built fully responsive with modern technologies: HTML5, CSS3 - Transitions/grid/flex,
+        JavaScript, Git
       </div>
     </div>
 
@@ -42,26 +43,26 @@
         </div>
       </li>
       <li class="tab">
-      <div>
-        <i class="fas fa-chalkboard-teacher fa-3x"></i>
-        <h3>Skills</h3>
-        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-      </div>
-    </li>
-    <li class="tab">
-      <div>
-        <i class="fas fa-envelope fa-3x"></i>
-        <h3>Contact Me</h3>
-        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-      </div>
+        <div>
+          <i class="fas fa-chalkboard-teacher fa-3x"></i>
+          <h3>Skills</h3>
+          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
+        </div>
+      </li>
+      <li class="tab">
+        <div>
+          <i class="fas fa-envelope fa-3x"></i>
+          <h3>Contact Me</h3>
+          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
+        </div>
     </div>
-  </li>
+    </li>
   </section>
 
-  <!-- About -->
+  <!-- Context Accordion -->
   <section class="about bg-light">
-    <ul class="accordian">
-      <div class="container">
+    <ul class="accordion">
+      <li class="context">
         <div class="grid-2">
           <div class="center">
             <i class="fas fa-hand-spock fa-10x"></i>
