added some text to landing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="text">
         This website is built fully responsive with modern technologies: HTML5, CSS3 - Transitions/grid/flex,
-        JavaScript, Git
+        JavaScript, Git. Some areas are underconstruction, Thank you for understanding.
       </div>
     </div>
 
