--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="showcase">
-    <div class="content">
+    <div class="splashContent">
       <div class="title">
         Hello <span class="text-secondary">World</span>
       </div>
@@ -23,76 +23,82 @@
         JavaScript, Git. <br><br>Some areas are underconstruction, Thank you for understanding.
       </div>
     </div>
-
   </header>
 
-  <section class="services">
-    <div class="container grid-4 center">
-      <li class="tab">
-        <div>
-          <i class="fas fa-grin-stars fa-3x"></i>
-          <h3>About Me</h3>
-          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-        </div>
-      </li>
-      <li class="tab">
-        <div>
-          <i class="fas fa-code-branch fa-3x"></i>
-          <h3>Projects</h3>
-          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-        </div>
-      </li>
-      <li class="tab">
-        <div>
-          <i class="fas fa-chalkboard-teacher fa-3x"></i>
-          <h3>Skills</h3>
-          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-        </div>
-      </li>
-      <li class="tab">
-        <div>
-          <i class="fas fa-envelope fa-3x"></i>
-          <h3>Contact Me</h3>
-          <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p> -->
-        </div>
-    </div>
-    </li>
-  </section>
-
-  <!-- Context Accordion -->
-  <section class="about bg-light">
+  <div class="container">
+    <header>
+      <h1>Richard Taveras</h1>
+    </header>
     <ul class="accordion">
-      <li class="context">
-        <div class="grid-2">
-          <div class="center">
-            <i class="fas fa-hand-spock fa-10x"></i>
-          </div>
-          <div>
-            <h3>About Me</h3>
-            <p>My name is Rich and welcome to my site. A little about myself: I'm a recent Fullstack bootcamp grad, I
-              grew up and currently live in NYC. I dabble in photography, I've hiked to all corners of
-              the city to snap a flick. My taste of music is big on Nirvana, 90's Hip Hop/Alt Rock/ and Grunge. I
-              appreciate art, design and self expression in all forms, my biggest aspiration right now is to be
-              successful and learn as much as I can in web development and design.
-              <br>
-              <br>
-              I graduated from the Software Guild Java Bootcamp and enrolled for it through the TechHire Open Code
-              program
-              at LaGuardia Community College in Queens, NY. The bootcamp consisted of over 300 hours of hands on
-              development.
-              <!-- We covered Java, JavaScript, HTML, CSS, JQuery, AJAX, CRUD, REST, the spring-framework, spring dependency
-                injection, OOP concepts, AOP programming, MVC architecture, Git, and the ever so rewarding console applications.</p> -->
-            </p>
-          </div>
+      <li class="tab">
+        <div class="social bio">
+          <P>About me
+            <a href="#" target="_blank">Bio</a>
         </div>
-      </div>
+        <div class="content">
+          <h1>Bio</h1>
+          <p> I grew up and currently live in NYC. I graduated from the Software Guilds' Java Fullstack Bootcamp. I appreciate art, music, design and self expression in all forms, my biggest aspiration right now is to be
+              successful and learn as much as I can in web development and design.      
+            </p>
+        </div>
+      </li>
+      <li class="tab">
+        <div class="social skills">
+          <a href="#" target="_blank">Skills</a>
+        </div>
+        <div class="content">
+          <h1>.Skills {</h1>
+          <p>Frontend: HTML, CSS, JavaScript, JQuery, responsive designs, bootstrap, Git.
+            <br>
+            <br>
+            Backend: Java, AJAX, CRUD, REST, spring-framework, spring dependency
+            injection, OOP, AOP programming, MVC architecture.
+          <h1>}</h1>
+        </div>
+      </li>
+      <li class="tab">
+        <div class="social hobbies">
+          <a href="" target="_blank">Hobbies</a>
+        </div>
+        <div class="content">         
+            <p>I dabble in photography and have been to all corners of the city to capture an image. <br><br>My taste of music is wide and big on 90's
+            Hip Hop/Alt Rock/ and Grunge. I'd range from Nirvana, Smashing Pumpkins, to Nas and Jay-Z.           
+          </p>        
+        </div>
+      </li>
+      <li class="tab">
+        <div class="social linkedin">
+          <a href="https://www.linkedin.com/in/richtaveras" target="_blank">LinkedIn</a>
+        </div>
+        <div class="content">
+          <h1>LinkedIn</h1>
+          <p>Click the logo and connect with me on a professional level on Linkedin,<br><BR>Or E-Mail me at taverasrich@gmail.com</p>
+        </div>
+      </li>
+      <!-- <li class="tab">
+        <div class="social instagram">
+          <a href="" target="_blank">Instagram</a>
+        </div>
+        <div class="content">
+          <h1>Instagram</h1>
+          <p></p>
+        </div>
+      </li> -->
+      <!-- <li class="tab">
+        <div class="social github">
+          <a href="http://github.com/richtav" target="_blank">Github</a>
+        </div>
+        <div class="content">
+          <h1>Github</h1>
+          <p>Check out my Github for my personal projects</p>
+        </div>
+      </li> -->
     </ul>
-  </section>
-
+  </div>
   <footer class="center bg-dark">
     <p>&copy; 2018</p>
-
   </footer>
   <script src="js/main.js"></script>
 </body>
+
 </html>
