--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <br>
             <br>
             Backend: Java, AJAX, CRUD, REST, spring-framework, spring dependency
-            injection, OOP, AOP programming, MVC architecture.
+            injection, OOP, AOP programming, MVC architecture, MySql.
           <h1>}</h1>
         </div>
       </li>
