--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </div>
         <div class="content">
           <h1>.Skills {</h1>
-          <p>Frontend: HTML, CSS, JavaScript, JQuery, responsive designs, bootstrap, Git.
+          <p>Frontend: HTML, CSS, JavaScript, JQuery, JSON, CRUD, responsive designs, bootstrap, Git.
             <br>
             <br>
-            Backend: Java, AJAX, CRUD, REST, spring-framework, spring dependency
+            Backend: Java, CRUD, REST, spring-framework, spring dependency
             injection, OOP, AOP programming, MVC architecture, MySql.
           <h1>}</h1>
         </div>
