--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
-    <link href="audicon.ico" rel="shortcut icon" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   <title>Rich Portfolio Website</title>
 </head>
 
-<body onload="initPage()">
+<body>
   <header class="showcase">
     <div class="menu-btn">
       <div class="btn-line"></div>
@@ -79,7 +78,7 @@
       </li>
       <li class="tab">
         <div class="social skills">
-          <a href="#" target="_blank">Skills</a>
+          <a href="https://github.com/richtav" target="_blank">Skills</a>
         </div>
         <div class="content">
           <h1>.Skills {</h1>
@@ -135,6 +134,7 @@
     </ul>
   </div>
   <div class="mainCol context">
+    <div class="box1">
     <section id="sectionA">
       <div class="text text-secondary"> Working hard on some enticing code to add here, Rage on this drumset for now :)</div>
         <div class="keys">
@@ -186,6 +186,7 @@
           <audio data-key="88" src="sounds/tom.wav"></audio>
           <audio data-key="67" src="sounds/tink.wav"></audio>
     </section>
+  </div>
   </div>
 
   <footer class="center bg-dark">
